<package>
  <name>alphapilot_trajectory</name>
  <version>0.0.1</version>
  <description>Trajectory planner for AlphaPilot</description>

  <maintainer email="lavigne.eric@gmail.com">Eric Lavigne</maintainer>
  <license>ASL 2.0</license>

  <url type="website">https://github.com/ericlavigne/AlphaPilot</url>
  <url type="bugtracker">https://github.com/ericlavigne/AlphaPilot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rotors_gazebo_plugins</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rotors_gazebo_plugins</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>xacro</run_depend>

</package>
